feat: add human quality annotations
